--- a/Parameter/Views/MainWindow.axaml
+++ b/Parameter/Views/MainWindow.axaml
@@ -4,6 +4,8 @@
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:views="clr-namespace:Parameter.Views"
+		xmlns:i="using:Avalonia.Xaml.Interactivity"
+		xmlns:bh="using:Parameter.Behaviors"
 		mc:Ignorable="d"
 		d:DesignWidth="500" d:DesignHeight="550"
 		Width="500" Height="550"
@@ -18,6 +20,10 @@
 	<Design.DataContext>
 		<vm:MainViewModel />
 	</Design.DataContext>
+
+	<i:Interaction.Behaviors>
+		<bh:WindowStateBehavior />
+	</i:Interaction.Behaviors>
 
 	<views:MainView />
 
