--- a/Parameter/Views/MainView.axaml
+++ b/Parameter/Views/MainView.axaml
@@ -27,7 +27,34 @@
 		<Style Selector=":is(AutoCompleteBox)#RegionBox">
 			<Setter Property="Grid.Column" Value="4"/>
 		</Style>
+
+		<Style Selector=":is(AutoCompleteBox) Button.remove-item-button">
+			<Setter Property="Opacity" Value="0"/>
+			<Setter Property="IsHitTestVisible" Value="False"/>
+		</Style>
+
+		<Style Selector=":is(AutoCompleteBox) ListBoxItem:pointerover Button.remove-item-button">
+			<Setter Property="Opacity" Value="1"/>
+			<Setter Property="IsHitTestVisible" Value="True"/>
+		</Style>
 	</UserControl.Styles>
+
+	<UserControl.Resources>
+		<DataTemplate x:Key="AutoCompleteBoxRemovableItemTemplate">
+			<DockPanel LastChildFill="True" >
+				<Button DockPanel.Dock="Right"
+						Classes="remove-item-button square content-center no-padding"
+						Background="Transparent"
+						Command="{Binding $parent[AutoCompleteBox].(ap:AutoCompleteBoxExtensions.RemoveItemCommand)}"
+						CommandParameter="{Binding}">
+					<TextBlock Text="&#xE4F6;"
+							   FontSize="16"
+							   FontFamily="{ StaticResource Phosphor }"/>
+				</Button>
+				<TextBlock Text="{Binding}" DockPanel.Dock="Left"/>
+			</DockPanel>
+		</DataTemplate>
+	</UserControl.Resources>
 
 	<Border Padding="8"
 			Background="{StaticResource PrimaryBackground}"
@@ -210,7 +237,9 @@
 								 FilterMode="Contains"
 								 Watermark="Prefix"
 								 ap:EnterFocusBehavior.NextFocus="{Binding ElementName=ParameterBox}"
-								 MinimumPrefixLength="0">
+								 MinimumPrefixLength="0"
+								 ItemTemplate="{StaticResource AutoCompleteBoxRemovableItemTemplate}"
+								 ap:AutoCompleteBoxExtensions.RemoveItemCommand="{Binding RemovePrefixFromHistoryCommand}">
 
 					<i:Interaction.Behaviors>
 						<bh:AutoCompleteResetCaretPositionBehavior/>
@@ -247,7 +276,9 @@
 								 FilterMode="Contains"
 								 Watermark="Parameter name"
 								 IsTextCompletionEnabled="False"
-								 MinimumPrefixLength="0">
+								 MinimumPrefixLength="0"
+								 ItemTemplate="{StaticResource AutoCompleteBoxRemovableItemTemplate}"
+								 ap:AutoCompleteBoxExtensions.RemoveItemCommand="{Binding RemoveParameterFromHistoryCommand}">
 
 					<i:Interaction.Behaviors>
 
